fixing horizontal scroll again and again

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
 
 * {
-  border: 1px solid red !important;
+  // border: 1px solid red !important;
   margin: 0;
   padding: 0;
   font-family: 'Inconsolata', monospace;
@@ -10,9 +10,8 @@
 
 .container {
   position: relative;
-  width: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 .container .section {
